# LabSuite

./: .gitignore  README.md  RUN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  REAL_TOOLING.md  chip-designs.html  index.html
docs/app/: app.css  app.js  data.js  index.html
docs/assets/: theme.css
scripts/: export_snapshot.py
src/labsuite/: __init__.py  active_directory.py  api.py  audit.py  backup.py  campaigns.py  cli.py  compliance.py  crypto.py  endpoints.py  engine.py  jit.py  models.py  network.py  okta.py  operations.py  policy.py  proxmox.py  reports.py  requests.py  scim.py  seed.py  truenas.py
src/labsuite/adapters/: __init__.py  base.py  live.py
tests/: test_alerts.py  test_api.py  test_backup.py  test_campaigns.py  test_compliance.py  test_cost.py  test_crypto.py  test_devices.py  test_end_to_end.py  test_jit.py  test_mfa.py  test_nested_groups.py  test_network.py  test_onboard_offboard.py  test_operations.py  test_proxmox_access.py  test_readiness.py  test_reports.py  test_requests.py  test_scim_sync.py  test_truenas_access.py
